--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,3 +70,9 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
+
+h1 {
+  font-family: var(--font-rocknroll);
+  padding: 0%;
+  margin: 0%;
+}
